force-app/main/default/objects/Big_Deal_Log__c/Big_Deal_Log__c.object-meta.xml
<CustomObject>
    <label>Big Deal Log</label>
    <nameField>
        <displayFormat>BDL-{0000}</displayFormat>
        <label>Big Deal Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Big Deal Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>