force-app/main/default/objects/Big_Deal_Log__c/fields/Alerted_Date__c.field-meta.xml
<CustomField>
    <fullName>Alerted_Date__c</fullName>
    <label>Alerted Date</label>
    <type>DateTime</type>
</CustomField>