force-app/main/default/objects/Big_Deal_Log__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Big Deal Logs</relationshipLabel>
    <relationshipName>Big_Deal_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>